[package]
name = "selfprof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
active-win-pos-rs = "0.7.1"
clap = { version = "4.3.12", features = ["derive"] }
user-idle = "0.5.3"

[profile.dev]
opt-level = 1
debug = 0
strip = true
