[package]
name = "selfprof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
active-win-pos-rs = "0.8.2"
clap = { version = "4.4.10", features = ["derive"] }
user-idle = "0.6.0"

[profile.dev]
opt-level = 1
debug = 0
strip = true

[profile.release]
strip = true